--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <h2>Lok treasure items, using Isotope</h2>
 <h2>Filter (show only)</h2>
-<div id="filters" class="button-group">
+<div id="filters">
+<div class="button-group">
   <button class="button is-checked" data-filter="*">show all</button>
   <button class="button" data-filter=".metal">metal</button>
   <button class="button" data-filter=".transition">transition</button>
@@ -36,13 +37,15 @@
 </div>
 
 <h2>filter by grade</h2>
-<select id="filter-grade" class="filters-select">
-  <option data-filter="*">show all</option>
-  <option data-filter="gradeLegendary">legendary</option>
-  <option data-filter="gradeEpic">epic</option>
-  <option data-filter="gradeMagic">magic</option>
-  <option data-filter="gradeNormal">normal</option>
-</select>
+<div class="button-group" data-filter-group="grade">
+  <button class="button is-checked" data-filter="*">any</button>
+  <button class="button" data-filter=".legendary">legendary</button>
+  <button class="button" data-filter=".epic">epic</button>
+  <button class="button" data-filter=".magic">magic</button>
+  <button class="button" data-filter=".normal">normal</button>
+</div>
+</div>
+
 
 <h2>Sort by category</h2>
 <div id="sorts" class="button-group">  <button class="button is-checked" data-sort-by="original-order">original order</button>
@@ -66,6 +69,11 @@
     <p class="symbol">Te</p>
     <p class="grade">5</p>
     <p class="weight">127.6</p>
+  </div>
+  <div class="element-item normal " data-category="metalloid">
+    <h3 class="name">Test</h3>
+    <p class="grade">1</p>
+
   </div>
   <!--  
   <div class="element-item post-transition metal " data-category="post-transition">
