avances con la traduccion

--- a/index.html
+++ b/index.html
@@ -70,11 +70,18 @@
     <p class="grade">5</p>
     <p class="weight">127.6</p>
   </div>
-  <div class="element-item normal " data-category="metalloid">
+  <div class="element-item normal cavalry_speed cavalry_load cavalry_attack cavalry_hp troops_speed cavalry_training_rate">
     <h3 class="name">Test</h3>
     <p class="grade">1</p>
-
+    <div class="cavalry_speed">0.08</div>   <!-- Solo pongo el maximo nivel -->
+    <div class="cavalry_load">0.1</div>
+    <div class="cavalry_attack">0.08</div>
+    <div class="cavalry_hp">0.1</div>
+    <div class="troops_speed">0.07</div>
+    <div class="cavalry_training_rate">0.05</div>
   </div>
+
+  
   <!--  
   <div class="element-item post-transition metal " data-category="post-transition">
     <h3 class="name">Bismuth</h3>
