--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <button class="button" data-filter=".lumber">lumber</button>
   <button class="button" data-filter=".stone">stone</button>  
 </div>
-<div class="button-group" data-filter-group="asdf">
+<div class="button-group" data-filter-group="recursos">
   <button class="button is-checked" data-filter="*">any</button>
   <button class="button" data-filter=".reserves">reserves</button>
   <button class="button" data-filter=".capability">capability</button>
