algunos comentarios eliminados

--- a/index.html
+++ b/index.html
@@ -71,10 +71,7 @@
 <div id="sorts" class="button-group">
   <button class="button is-checked" data-sort-by="original-order">original order</button>
   <button class="button" data-sort-by="name">name</button>
-  <button class="button" data-sort-by="symbol">symbol</button>
   <button class="button" data-sort-by="grade">grade</button>
-  <button class="button" data-sort-by="weight">weight</button>
-  <button class="button" data-sort-by="category">category</button>
 </div>
 
 
@@ -91,7 +88,7 @@
     <p class="grade">5</p>
     <p class="weight">127.6</p>
   </div> -->
-  <div class="element-item normal boost">
+  <div class="element-item normal boost gold">
     <h3 class="name">Test</h3>
     <p class="grade">1</p>
     <div class="cavalry_speed">0.08</div>   <!-- Solo pongo el maximo nivel -->
