--- a/index.html
+++ b/index.html
@@ -76,29 +76,12 @@
 
 
 <div class="grid" id="contenedor">
-  <!-- <div class="element-item transition metal " data-category="transition">
-    <h3 class="name">Mercury</h3>
-    <p class="symbol">Hg</p>
-    <p class="grade">3</p>
-    <p class="weight">200.59</p>
+  <div class="element-item normal boost" id="asd">
+    <h3 class="name">AAAAAAAAAA</h3>
+    <div class="gold protection reserves">0.1</div>
+    <!-- <div class="gold food reserves">0.1</div> -->
   </div>
-  <div class="element-item metalloid " data-category="metalloid">
-    <h3 class="name">Tellurium</h3>
-    <p class="symbol">Te</p>
-    <p class="grade">5</p>
-    <p class="weight">127.6</p>
-  </div> -->
-  <div class="element-item normal boost gold">
-    <h3 class="name">Test</h3>
-    <p class="grade">1</p>
-    <div class="cavalry_speed">0.08</div>   <!-- Solo pongo el maximo nivel -->
-    <div class="cavalry_load">0.1</div>
-    <div class="cavalry_attack">0.08</div>
-    <div class="cavalry_hp">0.1</div>
-    <div class="troops speed">0.07</div>
-    <div class="cavalry_training_rate">0.05</div>
-  </div>
-  <div class="element-item epic boost buff misc">
+  <div class="element-item epic boost buff ">
     <h3 class="name">orb of portal</h3>
     <p class="grade">6</p>
     <div class="cavalry speed">0.15</div>
