filtro cumpliendo dos condiciones con find

--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
   <button class="button" data-filter=".gold">gold</button>
   <button class="button" data-filter=".food">food</button>
   <button class="button" data-filter=".lumber">lumber</button>
-  <button class="button" data-filter=".stone">stone</button>  
+  <button class="button" data-filter=".stone">stone</button>
+  <button class="button" data-filter=".resource">resource</button>
 </div>
 <div class="button-group" data-filter-group="recursos">
   <button class="button is-checked" data-filter="*">any</button>
   <button class="button" data-filter=".reserves">reserves</button>
-  <button class="button" data-filter=".capability">capability</button>
+  <button class="button" data-filter=".storage">storage</button>
   <button class="button" data-filter=".protection">protection</button>
+  <button class="button" data-filter=".production">production</button>
   <button class="button" data-filter=".gathering speed">gathering speed</button>  
   <button class="button" data-filter="speedSearch">speed</button>  
 </div>
@@ -78,7 +80,10 @@
 <div class="grid" id="contenedor">
   <div class="element-item normal boost" id="asd">
     <h3 class="name">AAAAAAAAAA</h3>
-    <div class="gold protection reserves">0.1</div>
+    <div class="gold protection reserves aljsldksajd laskjdlasjd lasjdlksdj ">0.1</div>
+    <div class="protection reserves">0.1</div>
+    <div class="protection reserves">0.1</div>
+    <div class="protection reserves">0.1</div>
     <!-- <div class="gold food reserves">0.1</div> -->
   </div>
   <div class="element-item epic boost buff ">
