--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" />
   <title>LOK Treasure-Items</title>
-
-
+  <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" />
+  
+  <!-- fuentes de google fonts -->
+  <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lexend%20Deca' rel='stylesheet'>
   <!-- para el fondo de los tooltips -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 
+  <!-- jquery para el isotope y boostrap -->
   <script src="https://code.jquery.com/jquery-3.6.1.min.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 
@@ -29,7 +32,7 @@
 <body>
 
 
-  <h2 style="text-align: center;"><u>Lok Treasure Items</u></h2>
+  <h2 id="titulo"><span>Lok Treasure Items</span></h2>
   <div id="filters">
 
     <!-- <div style="display: flex; justify-content: space-between; width: 20rem;">
