--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <button class="button is-checked" data-filter="*">any</button>
       <button class="button" data-filter=".speed">speed</button>
       <button class="button" data-filter=".hp">hp</button>
+      <button class="button" data-filter=".attack">attack</button>
       <button class="button" data-filter=".defense">defense</button>
       <button class="button" data-filter=".load">load</button>
       <button class="button" data-filter=".training_rate">training rate</button>
