background al contenedor de botones

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <div id="bloque-sorts">
 
-      <h4>Sort by Category</h4>
+      <h4>Sort</h4>
       <div id="sorts" class="button-group">
         <button class="button is-checked" data-sort-by="original-order">original order</button>
         <button class="button" data-sort-by="name">name</button>
