titulos grandes, color contenedores, % al reves

--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@
         <button class="button Disabled" data-filter=".training_cost">training cost</button>
       </div>
 
-
-      <h4>Healing</h4>
-      <div class="button-group" data-filter-group="battle">
-        <button class="button is-checked" data-filter="*">any</button>
-        <button class="button" data-filter=".healing_speed">healing speed</button>
-        <button class="button Disabled" data-filter=".mortality reduction">mortality reduction</button>
-        <button class="button Disabled" data-filter=".defense mortality reduction bonus">defense mortality reduction
-          bonus</button>
-        <button class="button Disabled" data-filter=".hospital_capacity">hospital capacity</button>
-      </div>
-
-
       <h4>Various</h4>
       <div class="button-group" data-filter-group="various">
         <button class="button is-checked" data-filter="*">any</button>
         <button class="button" data-filter=".construction_speed">construction speed</button>
         <button class="button" data-filter=".research_speed">research speed</button>
         <button class="button" data-filter=".action_point">action point</button>
+      </div>
+
+    </div>
+
+    <div id="bloque2">
+
+      <h4>Healing</h4>
+      <div class="button-group" data-filter-group="battle">
+        <button class="button is-checked" data-filter="*">any</button>
+        <button class="button" data-filter=".healing_speed">healing speed</button>
+        <button class="button Disabled" data-filter=".mortality reduction">mortality reduction</button>
+        <button class="button Disabled" data-filter=".hospital_capacity">hospital capacity</button>
       </div>
 
       <h4>Buff & Debuff</h4>
