tooltip para los botones

--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
         <button class="button" data-filter=".hp">hp</button>
         <button class="button" data-filter=".defense">defense</button>
         <button class="button" data-filter=".load">load</button>
-        <button class="button" data-delay='{"show":"3000", "hide":"200"}' data-toggle="tooltip"
-          title="Indica cuantas tropas se pueden entrenar como maximo en el cuartel"
-          data-filter=".training_rate">training
-          rate</button>
+        <button class="button" data-filter=".training_rate">training rate</button>
         <button class="button" data-filter=".training_speed">training speed</button>
         <button class="button Disabled" data-filter=".training_cost">training cost</button>
       </div>
@@ -106,7 +103,7 @@
       <div class="button-group" data-filter-group="battle">
         <button class="button is-checked" data-filter="*">any</button>
         <button class="button" data-filter=".healing_speed">healing speed</button>
-        <button class="button Disabled" data-filter=".mortality reduction">mortality reduction</button>
+        <button class="button Disabled" data-filter=".mortality_reduction">mortality reduction</button>
         <button class="button Disabled" data-filter=".hospital_capacity">hospital capacity</button>
       </div>
 
@@ -115,9 +112,7 @@
         <button class="button is-checked" data-filter="*">any</button>
         <button class="button" data-filter=".buff, .debuff">both</button>
         <button class="button" data-filter=".buff">only buffs</button>
-        <!-- aplica para el propio reino, se pueden ver en la esquina inferior derecha -->
         <button class="button" data-filter=".debuff">only debuffs</button>
-        <!-- aplica para el enemigo, hay que hacer click en un castillo enemigo y luego en el rallito naranja -->
       </div>
 
       <h4>Grade</h4>
