--- a/index.html
+++ b/index.html
@@ -138,8 +138,16 @@
     </div>
 
     <div id="bloque-botones-4">
-      <button class="button button--reset">Reset filters</button>
+      <button class="button button--reset">Reset filters ↺</button>
     </div>
+
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider round"></span>
+    </label>
+    
+    <input type="checkbox" class="switch " > 
+
   </div>
 
 
