idea filtrar por treasure o master completo

--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
         <button class="button" data-filter=".debuff">only debuffs</button>
       </div>
 
+      <!-- <h4>Normal or Master</h4>
+      <div class="button-group" data-filter-group="normal_master">
+        <button class="button is-checked" data-filter="*">any</button>
+        <button class="button" data-filter=".treasure_boost">Normal Treasure (no stars)</button>
+        <button class="button" data-filter=".master_bonus">Master Bonus</button>
+      </div> -->
+
       <h4>Grade</h4>
       <div class="button-group" data-filter-group="grade">
         <button class="button is-checked" data-filter="*">any</button>
