get favicon from sprites

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta charset="utf-8">
   <title>LOK Treasure-Items</title>
   <!-- <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" /> -->
-  <link rel="icon" href="../sprites/icon_10502001.png" type="image/png"/>
+  <link rel="icon" href="sprites/icon_10502001.png" type="image/png"/>
 
   <!-- fuentes de google fonts -->
   <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
